Outline bib updated

--- a/Outline/MyBib.bib
+++ b/Outline/MyBib.bib
@@ -6,6 +6,14 @@
  edition = {First}
 }
 
+@book {OOP,
+ author = {Peter Coad and Jill Nicola},
+ publisher = {P T R Prentice Hall},
+ title = {Object Oriented Programming},
+ year = {1993},
+ edition = {First}
+}
+
 @article{Paredes,
     author  = {M. Paredes and M. Sartor and A. Daidie},
     title   = {Advanced Assistance Tool for Optimal Compression Spring Design},
@@ -33,10 +41,14 @@
 }
 
 @article{Relaxation1,
-    author  = {M. J. Siegel and D. P. Athans},
-    title   = {Relaxation of Compression Springs at High Temperatures},
-    year    = {1970},
-    journal = {Transactions of the ASME},
+  title={Relaxation of Compression Springs at High Temperatures},
+  author={Siegel, MJ and Athans, DP},
+  journal={Journal of Fluids Engineering},
+  volume={92},
+  number={3},
+  pages={627--632},
+  year={1970},
+  publisher={American Society of Mechanical Engineers}
 }
 
 @article{Relaxation2,
@@ -47,11 +59,120 @@
 }
 
 @article{Relaxation3,
-    author  = {V. Kobelev},
-    title   = {Relaxation and Creep in Twist and Flexure},
-    year    = {2014},
-    journal = {Multidiscipline Modeling in Materials and Structures},
+	author = { V. Kobelev },
+	title = {Relaxation and creep in twist and flexure},
+	journal = {Multidiscipline Modeling in Materials and Structures},
+	volume = {10},
+	number = {3},
+	pages = {304-327},
+	year = {2014},
+	doi = {10.1108/MMMS-11-2013-0067},
+    
 }
+@article{Creep,
+  title={Modeling of high-temperature creep for structural analysis applications},
+  author={Naumenko, Konstantin},
+  journal={Professorial thesis, Martin Luther University Halle-Wittenberg, Germany},
+  year={2006}
+}
+
+
+@article{IMSM2010,
+    author  = {M. R. Brake and J.E. Massad and B. Beheshti and J. Davis and R.C. Smith and K. Chowdhary and S. Wang},
+    title   = {Uncertainty Enable Design of an Acceleration Switch},
+    year    = {2011},
+    journal = {Proceedings of ASME 2011 International Mechanical Engineering Congress and Exposition},
+}
+
+@article{Bioinformatics,
+    author  = {Yvan Saeys and Inaki Inza and Pedro Larranaga},
+    title   = {A Review of Feature Selection Techniques in Bioinformatics.},
+    year    = {2007},
+    journal = {Bioinformatics},
+}
+
+@article{Wrappers,
+    author  = {Ron Kohavi and George H. John},
+    title   = {Wrappers for Feature Subset Selection},
+    year    = {1996},
+    journal = {Artificial Intelligence},
+}
+
+@article{Error,
+    author  = {Bin Liang and Sankaran Mahdevan},
+    title   = {Error and Uncertainty Quantification and Sensitivity Analysis in Mechanics Computational Models},
+    year    = {2003},
+    journal = {International Journal for Uncertainty Quantification},
+}
+
+@article{Derivative,
+    author  = {Luis Miguel Rios and Nikolaos V. Sahinidis},
+    title   = {Derivative-free Optimization: A Review of Algorithms and Comparison of Software Implementations},
+    year    = {2012},
+    journal = {Springer Science+Business Media},
+}
+
+@article{DirectPaper,
+    author  = {Mattias Bjorkman and Kenneth Holmstrom},
+    title   = {Global Optimization Using the DIRECT Algorithm in Matlab},
+    year    = {1999},
+    journal = {Advanced Modeling and Optimization},
+}
+
+@book{MATLAB:2014a,
+	author = {MATLAB},
+	title = {version 8.3.0.532 (R2014a)},
+	publisher = {The MathWorks Inc.},
+	address = {Natick, Massachusetts},
+	year = {2014},
+}
+
+
+@article{DirectUserGuide,
+    author  = {Daniel E. Finkel},
+    title   = {DIRECT Optimization Algorithm User Guide},
+    year    = {2003},
+}
+
+
+
+@book {Global,
+ author = {A. Saltelli and Marco Ratto and Terry Andres and Francesca Campolongo and Jessica Cariboni and Debora Gatelli and Michaela Saisana and Stefano Tarantola},
+ publisher = {John Wiley and Sons Ltd.},
+ title = {Global Sensitivity Analysis: The Primer},
+ year = {2008},
+ edition = {First},
+}
+
+
+
+@phdthesis{Ch2000,
+  title={Boundary element analysis of time-dependent material non-linearity},
+  author={Chandenduang, Chatrchai},
+  year={2000},
+  school={University of Nottingham}
+}
+
+@Misc{Massad2015,
+  author =       {Massad, Jordan},
+  title =        {Flexible Optimization and Uncertainty-Enabled Design of Helical Compression Springs in Nonlinear Spring-Mass-Damper Systems.},
+  year =         {2015},
+  month =        {7},
+
+}
+
+@misc{SpringDevice,
+  title = {A History of Springs},
+  howpublished = {\url{http://www.smihq.org/public/publications/springsmag08_07a.html}},
+  note = {Accessed: 2015-07-20}
+}
+
+@misc{SpringIndex,
+  title = {Newcomb Spring Corp},
+  howpublished = {\url{http://www.newcombspring.com/article_spring_index.html}},
+  note = {Accessed: 2015-07-20}
+}
+
 
 
 
