--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -112,7 +112,7 @@ Helical springs are the typical spring that comes to most peoples mind, for illu
 
 		\begin{figure}[h]
 		 \begin{center}\includegraphics[scale=.2]{Spring.png}\end{center}
-		 \caption{An example of a helical compression spring, see \cite{Massad2015}}
+		 \caption{An example of a helical compression spring, from \cite{Massad2015}}
 		 \label{Spring}
 		 
 		 \end{figure}
@@ -228,7 +228,7 @@ A list of possible constraints/objectives given in minimization form is below, p
 	\item$-UTS + \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
 d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] < 0$
 
-We do not wish to allow the torsional stress to exceed a certain amount, $UTS$.
+We do not wish to allow the torsional stress to exceed a certain amount, the ultimate torsional stress, $UTS$.
 
 \end{enumerate}	
 
