--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -23,19 +23,21 @@
 
 \def\thefootnote{\arabic{footnote}}
 \begin{center}
-  Justin Krueger\footnote{Mathematics, Virginia Tech University},
+  
   Alistair Bentley\footnote{Mathematics, Clemson University},
-  Tianyu Qiu\footnote{Mathematics, University of Delaware},
+   Tim Hodges\footnote{Mathematics, Colorado State University},
+   Jiahua Jiang\footnote{Mathematics, University of Massachusetts Dartmouth },
+  Justin Krueger\footnote{Mathematics, Virginia Tech},
   Saideep Nannapaneni\footnote{Civil \& Environmental Engineering,Vanderbilt University},
-  Jiahua Jiang\footnote{Mathematics, University of Massachusetts Dartmouth },
-  Tim Hodges\footnote{Mathematics, Colorado State University}
+  Tianyu Qiu\footnote{Mathematics, University of Delaware}
+   
 \end{center}
 
 %\vspace{.1truein}
 
 \begin{center}
-Problem Presenters: Jordan Massad \footnote{Sandia National Laboratory},
-Sean Webb \footnote{Sandia National Laboratory},
+Problem Presenters: Jordan Massad\footnote{Sandia National Laboratory},
+Sean Webb\footnote{Sandia National Laboratory};
 	Faculty Mentors: Ilse Ipsen\footnote{Mathematics, North Carolina State University},
 	Ralph Smith\footnote{Mathematics, North Carolina State University}, 
 \end{center}
@@ -54,52 +56,63 @@ Sean Webb \footnote{Sandia National Laboratory},
 %It should be written as much as possible in non-technical terms, so that a
 %lay reader can understand the context and the contribution of the paper.
 
-The use of mechanical switches in industry is a cornerstone of the modern world. Many mechanical switches are designed to use a spring \cite{SpringDevice}. 
-
-\subsection{Example}
-\label{sec:example}
-Consider an acceleration switch in figure \ref{Acceleration Switch} . 
+Springs have many everyday uses, and we have studied them thoroughly as a result~\cite{Wahl}. We find them in cars, homes, gyms, and industry, and one common use of helical compression springs, in particular, is in mechanical switches~\cite{SpringDevice}. Acceleration switches, such as the one seen in Figure~\ref{Acceleration Switch}, are used to close electrical circuits once the object carrying the switch reaches a certain acceleration. The main use of such switches is to provide power to sensory equipment and data recorders for very precise amounts of time, and one example of their use is collecting data from rocket sled experiments. 
 
 		\begin{figure}[h]
 		 \begin{center}\includegraphics[scale=.2]{Acceleration_Switch.png}\end{center}
 		 \caption{An example of an acceleration switch, see reference \cite{Massad2015}.}
 		 \label{Acceleration Switch}
 		 
+		 \end{figure}	 
+		
+These rocket sled tests include very high velocities and accelerations and end in a destructive impact, and since the test is not easily replicated, we must have the ability to consistently and correctly collect data. This means we require that the spring in the acceleration switch must behave as expected to the forces exerted on it, and having a switch that is closed earlier or later than expected is undesirable~\cite{IMSM2010}. Designing a spring to behave as desired is a complicated problem that requires satisfying numerous constraints on the spring's physical properties. That the desired spring can vary depending on the application further complicates the problem. 
+
+Designing an optimal spring is not a new problem, though. Brake et al. considered the design of an acceleration switch with enabled uncertainty~\cite{IMSM2010}. Alternatively, Sastry et al. implemented probabilistic response surface methodology to investigate the complications of uncertainty in designing a spring\cite{Reliability}. Others have considered the reduction of the optimization problem to focus on a single parameter~\cite{Robust}. 
+
+Spring design under these conditions amounts to a constrained optimization problem where certain properties of the spring may need to be maximized or minimized subject to bounds on some or all of the spring's other properties. Extending the scope of focus beyond springs' use in mechanical switches, which already cover a vast spread of specific spring designs, results in even more possibilities for design specifications. Rather than developing methods to solve these problems on an ad hoc basis, developing tools to address a wide variety of constrained optimization problem formulations for spring design would be beneficial. 
+
+Similar tools have been developed in the past~\cite{Paredes}, and in this manuscript we build on this work. Motivated by the premise of the workflow shown in Figure~\ref{Workflow}, we produce a novel tool with new capabilities. 
+
+		\begin{figure}[h!]
+		 \begin{center}\includegraphics[scale=.4]{IMSM_Workflow.png}\end{center}
+		 \caption{Illustration of the flow of our approach.}
+		 \label{Workflow}
+		 
 		 \end{figure}
 		 
-		
-This switch is used in high acceleration testing of a rocket sled. These tests include very high velocities and accelerations, and end in a destructive impact. Since the test is not easily replicated we must collect data correctly the first time. Mechanically, when a certain velocity is met data collection should start. In other words, when a certain force is exerted on the switch this will cause the pins at both ends to connect and allow data collection. For a more in depth look at this example look at \cite{IMSM2010}
-
-For this example we must optimize the spring to give the best chances of success. Velocities of a rocket sled may vary depending on application, so we should be able to optimize the spring for the application. This leads to an optimization problem. The problem is well defined once the constraints are understood and the objective function that must be maximized or minimized is defined. 
-
-\subsection{Generalizing The Example}
-Expanding on the scope of this problem, a switch may be used in a myriad of ways \cite{SpringDevice}. Depending on the application it is important that one can find an optimal spring. The optimization problem must now require flexibility to allow how a spring is determined to be optimal. In other words, there can be a variety of objective functions and a variety of constraints that are possible.   
-
-For any set of constraints and objective function the optimization problem will depend on a set of variables. In optimization we only wish to concern ourselves with the variables for optimization. One can implement structures to hold all data for a spring, and access the relevant  variables for optimization when needed. 
-
-In addition, with the expansion of the problem comes the growth of uncertainty in the problem. One can quantify the uncertainty of the problem by conducting a sensitivity analysis of the objective function subject to the constraints and variables given. 
-\newline
-
-The problems that will be discussed in this paper are as follows: 
-\begin{itemize}
-	\item Can we develop a flexible framework for designing an optimal spring?
-
-	\item Is one able to incorporate feasibility?
-	
-	\item What about the concept of stress relaxation?
-	
-	\item What about uncertainty in design optimization? 
-	
-	
-\end{itemize}
-
-\subsection{History}
-Designing an optimal spring is not a new problem. In 2010 at the SAMSI IMSM workshop a team considered the design of an acceleration switch with enabled uncertainty. In fact, the switch they considered was in figure \ref{Acceleration Switch}. This approach lead to a paper \cite{IMSM2010}. This is not the only approach to uncertainty, in \cite{Reliability} probabilistic response surface methodology was implemented to investigate the complications of uncertainty in designing a spring. In addition to these types of approaches it is possible to narrow focus to a single parameter, in \cite{Robust} they focus on the spring stiffness. In \cite{Paredes} they attempt to design an optimal spring, with the introduction of a sizing tool. All references listed are informed to some extent by \cite{Wahl}. 
+The novelties we include are the inherit flexibility in our tool's framework, tools to visualize the existence of solutions for constrained optimization problems, sensitivity analysis capabilities, and design optimization under uncertainty. We also discuss the inclusion of stress relaxation constraints in the spring design, which to our knowledge has not been considered before. We provide details regarding these items as follows. Section~\ref{sec:The_Problem} formally defines the spring design problem for helical compression springs. Section~\ref{sec:The_Approach} expands on the workflow shown in Figure~\ref{Workflow}. Section~\ref{Computational_Experiments} shares cases studies using our approach, and Section~\ref{Summary} summarizes our work and provides suggestions for future work.
 
 
+%%For this example we must optimize the spring to give the best chances of success. Velocities of a rocket sled may vary depending on application, so we should be able to optimize the spring for the application. This leads to an optimization problem. The problem is well defined once the constraints are understood and the objective function that must be maximized or minimized is defined. 
+%
+%\subsection{Generalizing The Example}
+%Expanding on the scope of this problem, a switch may be used in a myriad of ways \cite{SpringDevice}. Depending on the application it is important that one can find an optimal spring. The optimization problem must now require flexibility to allow how a spring is determined to be optimal. In other words, there can be a variety of objective functions and a variety of constraints that are possible.   
+%
+%For any set of constraints and objective function the optimization problem will depend on a set of variables. In optimization we only wish to concern ourselves with the variables for optimization. One can implement structures to hold all data for a spring, and access the relevant  variables for optimization when needed. 
+%
+%In addition, with the expansion of the problem comes the growth of uncertainty in the problem. One can quantify the uncertainty of the problem by conducting a sensitivity analysis of the objective function subject to the constraints and variables given. 
+%\newline
+%
+%The problems that will be discussed in this paper are as follows: 
+%\begin{itemize}
+%	\item Can we develop a flexible framework for designing an optimal spring?
+%
+%	\item Is one able to incorporate feasibility?
+%	
+%	\item What about the concept of stress relaxation?
+%	
+%	\item What about uncertainty in design optimization? 
+%	
+%	
+%\end{itemize}
+
+%\subsection{History}
+%Designing an optimal spring is not a new problem. In 2010 at the SAMSI IMSM workshop a team considered the design of an acceleration switch with enabled uncertainty. In fact, the switch they considered was in figure \ref{Acceleration Switch}. This approach lead to a paper \cite{IMSM2010}. This is not the only approach to uncertainty, in \cite{Reliability} probabilistic response surface methodology was implemented to investigate the complications of uncertainty in designing a spring. In addition to these types of approaches it is possible to narrow focus to a single parameter, in \cite{Robust} they focus on the spring stiffness. In \cite{Paredes} they attempt to design an optimal spring, with the introduction of a sizing tool. All references listed are informed to some extent by \cite{Wahl}. 
 
 
-In this paper we will give a description of the springs of interest, helical compression springs, see section \ref{sec:Springs}. Next, the formulation of the problem, see section \ref{sec:Problem}, and the approach taken to the problem see section \ref{sec:Approach}. Following will be a section on workflow with descriptions of each step in the workflow see \ref{sec:workflow}. We will discuss a few case studies given the framework constructed, see \ref{sec:Experiments}. Lastly, a summary with future work that can be worked on, see \ref{sec:summary}.
+
+
+%In this paper we will give a description of the springs of interest, helical compression springs, see section \ref{sec:Springs}. Next, the formulation of the problem, see section \ref{sec:Problem}, and the approach taken to the problem see section \ref{sec:Approach}. Following will be a section on workflow with descriptions of each step in the workflow see \ref{sec:workflow}. We will discuss a few case studies given the framework constructed, see \ref{sec:Experiments}. Lastly, a summary with future work that can be worked on, see \ref{sec:summary}.
 
 
 
