Updated references for sensitivity and optimization

--- a/Outline/MyBib.bib
+++ b/Outline/MyBib.bib
@@ -173,6 +173,25 @@
   note = {Accessed: 2015-07-20}
 }
 
+@article{filter,
+    author  = {Y.Saeys, I.Inza, P.Larranaga},
+    title   = {A review of feature selection techniques in bioinformatics},
+    year    = {2007},
+    journal = {Bioinformatics},
+}
+@article{wrapper,
+    author  = {R.Kohavi, G.H.John},
+    title   = {Wrappers for feature subset selection},
+    year    = {1997},
+    journal = {Artificial Intelligence},
+}
+@book{sensitivity,
+    author = {A.Saltelli},
+    publisher = {John Wiley \& Sons},
+    title = {Global sensitivity analysis},
+    year = {2008},
+}
+
 
 
 
