More report writing on spring section

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -215,7 +215,7 @@ d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS\end{equation}
 			
 			
 \section{The Problem} 
-\label{sec:Problem}
+\label{sec:The_Problem}
 
 \textbf{Add dependency graph.} 
 
@@ -281,7 +281,7 @@ These assumptions have reduced the set of design parameters and have allowed us 
 
 
 \section{The Approach}
-\label{sec:Approach}
+\label{sec:The_Approach}
 
 \textbf{Present and justify approach for solving the problem}
 \textbf{Explain advantages of approach over existing ones}
@@ -360,7 +360,7 @@ such that
  
 
 \section{Computational Experiments}
-\label{sec:Experiments}
+\label{sec:Computational_Experiments}
 
 \newpage
 \subsection{Case 1:}
@@ -440,7 +440,7 @@ such that
 
 
 \section{Summary and Future Work}
-\label{sec:summary}
+\label{sec:Summary}
 The ability to interchange constraints and objective functions with any number of design variables allows the user the utmost flexibility. With the addition of feasibility and sensitivity analysis it is possible for any configuration of objective function, constraints, and design variables to be analyzed for refinement. The quantification of stress relaxation and creep allow the user a chance to incorporate these properties into any configuration, especially those that have never been tested. 
 
 Some limitations of the approach outlined are as follows. The choice of optimization and sensitivity analysis are fixed, however, they are modularized to allow a different optimization routine and sensitivity analysis to be ported in. Given the amount of flexibility that is enabled, a user will have to be able to decide if a infeasible solution is due to user error. 
